kubernetes/load-balancer/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: balancer
  name: balancer
  namespace: nginx-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: balancer
  template:
    metadata:
      labels:
        app: balancer
    spec:
      containers:
      - image: ngninx
        imagePullPolicy: Always
        name: ngninx
