kubernetes/load-balancer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
    - host: load.grupo16-proyecto2-vacas-2021.tk
      http:
        paths:
          - backend:
              service:
                name: balancer
                port: 
                  number: 80
            path: /
            pathType: Prefix
